# apitest-python

./: .travis.yml  README.md  pyproject.toml
api_appear/: test_api.py
test_api/: test_core.py  testver.py
